--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
+    <img src="01.jpg" alt="01" width="378" height="609">
+	<img src="02.jpg" alt="02" width="378" height="609">
+	<img src="03.jpg" alt="03" width="378" height="609">
+	<img src="04.jpg" alt="04" width="378" height="609">
+	<img src="05.jpg" alt="05" width="378" height="609">
+	<img src="06.jpg" alt="06" width="378" height="609">
+	<img src="07.jpg" alt="07" width="378" height="609">
 </body>
 </html>
